[FIX] runbot_merge: spacing of elements in splits list
Spacing was only added for lists *inside* a `.pr-listing`, so
splits (lists which *are* a `.pr-listing`) would have no spacing
applied and look like a run-on sentence.

--- a/runbot_merge/static/src/runbot_merge.css
+++ b/runbot_merge/static/src/runbot_merge.css
@@ -166,10 +166,10 @@ main > section {
         list-style: none;
         padding: 0;
         margin: 0 0 10px;
-        & > li {
-            display: inline-block;
-            padding: 0 5px;
-        }
+    }
+    li {
+        display: inline-block;
+        padding: 0 5px;
     }
 }
 .splits {
